# src/routes/activo.routes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { crearActivo, listarActivos, obtenerActivo, actualizarActivo, cambiarEstadoActivo } from '../controllers/activo.controller';
+import { crearActivo, listarActivos, obtenerActivo, actualizarActivo, cambiarEstadoActivo, asignarActivo } from '../controllers/activo.controller';
 
 const router: Router = Router();
 
@@ -8,5 +8,6 @@ router.post('/', crearActivo);
 router.get('/:id', obtenerActivo);
 router.patch('/:id', actualizarActivo);
 router.patch('/:id/estado', cambiarEstadoActivo);
+router.post('/:id/asignaciones', asignarActivo);
 
 export default router;
